NXP-5449: make it possible to save and load a faceted search with its parameters

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -1,4 +1,16 @@
 label.faceted.search=Faceted Search
+label.faceted.searches=Available Faceted Searches
 label.faceted.search.default=Default Faceted Search
 
 label.faceted.search.fulltext=Keywords
+
+command.faceted.search.go=Go!
+command.faceted.search.clear=Clear
+
+label.none=None
+label.user.saved.searches=Your searches
+label.all.saved.search=All searches
+
+label.saved.searches=Saved searches
+label.save.search.description1=This search result was relevant?
+label.save.search.description2=You can keep the filters as a saved search:
