--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,4 +1,16 @@
 label.faceted.search=Recherche par filtres
+label.faceted.searches=Recherche par filtres disponible
 label.faceted.search.default=Filtres par d\u00E9faut
 
 label.faceted.search.fulltext=Mots cl\u00E9s
+
+command.faceted.search.go=Go !
+command.faceted.search.clear=R\u00E9initialiser
+
+label.none=Aucune
+label.user.saved.searches=Vos recherches
+label.all.saved.search=Toutes les recherches
+
+label.saved.searches=Recherches enregistr\u00E9es
+label.save.search.description1=Ce r\u00E9sultat de recherche est-il pertinent?
+label.save.search.description2=Vous pouvez conserver ces filtres comme une recherche enregistr\u00E9e :
