NXP-5449: update labels

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -9,7 +9,7 @@ command.faceted.search.clear=R\u00E9initialiser
 
 label.none=Aucune
 label.user.saved.searches=Vos recherches
-label.all.saved.search=Toutes les recherches
+label.all.saved.searches=Toutes les recherches
 
 label.saved.searches=Recherches enregistr\u00E9es
 label.save.search.description1=Ce r\u00E9sultat de recherche est-il pertinent?
