--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -9,7 +9,7 @@ command.faceted.search.clear=Clear
 
 label.none=None
 label.user.saved.searches=Your searches
-label.all.saved.search=All searches
+label.all.saved.searches=All searches
 
 label.saved.searches=Saved searches
 label.save.search.description1=This search result was relevant?
