--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -14,3 +14,5 @@ label.all.saved.searches=All searches
 label.saved.searches=Saved searches
 label.save.search.description1=This search result was relevant?
 label.save.search.description2=You can keep the filters as a saved search:
+
+label.search.saved=Your search has been saved
