--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -14,3 +14,5 @@ label.all.saved.searches=Toutes les recherches
 label.saved.searches=Recherches enregistr\u00E9es
 label.save.search.description1=Ce r\u00E9sultat de recherche est-il pertinent?
 label.save.search.description2=Vous pouvez conserver ces filtres comme une recherche enregistr\u00E9e :
+
+label.search.saved=Votre recherche a \u00E9t\u00E9 enregistr\u00E9e
