NXP-5509: add wrapper widget to be able to regroup widgets

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -2,6 +2,9 @@ label.faceted.search=Faceted Search
 label.faceted.searches=Available Faceted Searches
 label.faceted.search.default=Default Faceted Search
 
+label.faceted.search.textSearch=Text search
+label.faceted.search.dateSearch=Date Search
+label.faceted.search.peopleSearch=People
 label.faceted.search.fulltext=Keywords
 
 command.faceted.search.go=Go!
