--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -2,6 +2,9 @@ label.faceted.search=Recherche par filtres
 label.faceted.searches=Recherche par filtres disponible
 label.faceted.search.default=Filtres par d\u00E9faut
 
+label.faceted.search.textSearch=Recherche textuelle
+label.faceted.search.dateSearch=Recherche par date
+label.faceted.search.peopleSearch=Recherche par utilisateur
 label.faceted.search.fulltext=Mots cl\u00E9s
 
 command.faceted.search.go=Go !
