--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -3,8 +3,8 @@ label.faceted.searches=Available Faceted Searches
 label.faceted.search.default=Default Faceted Search
 
 label.faceted.search.textSearch=Text search
-label.faceted.search.dateSearch=Date Search
-label.faceted.search.peopleSearch=People
+label.faceted.search.dateSearch=Date search
+label.faceted.search.peopleSearch=User search
 label.faceted.search.fulltext=Keywords
 
 command.faceted.search.go=Go!
