NXP-5452: Add permlink for a faceted search

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -19,6 +19,7 @@ label.save.search.description1=This search result was relevant?
 label.save.search.description2=You can keep the filters as a saved search:
 
 label.search.saved=Your search has been saved in your personal workspace
+label.search.permalink= Permanent link to this search
 
 # ECM types
 FacetedSearchDefault=Faceted search
