--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -19,6 +19,7 @@ label.save.search.description1=Ce r\u00E9sultat de recherche est-il pertinent ?
 label.save.search.description2=Vous pouvez conserver ces filtres comme une recherche enregistr\u00E9e :
 
 label.search.saved=Votre recherche a \u00E9t\u00E9 enregistr\u00E9e dans votre espace personnel
+label.search.permalink= Lien permanent vers cette recherche
 
 # ECM types
 FacetedSearchDefault=Recherche par filtre
