NXP-5574: Update labels, improve permalink location, move search date fields to one row

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -7,7 +7,7 @@ label.faceted.search.dateSearch=Date search
 label.faceted.search.peopleSearch=User search
 label.faceted.search.fulltext=Keywords
 
-command.faceted.search.go=Go!
+command.faceted.search.go=Go »
 command.faceted.search.clear=Clear
 
 label.none=None
@@ -15,8 +15,7 @@ label.user.saved.searches=Your searches
 label.all.saved.searches=All searches
 
 label.saved.searches=Saved searches
-label.save.search.description1=This search result was relevant?
-label.save.search.description2=You can keep the filters as a saved search:
+label.save.search.description=To save this search, enter a name and confirm:
 
 label.search.saved=Your search has been saved in your personal workspace
 label.search.permalink= Permanent link to this search
