--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -15,8 +15,7 @@ label.user.saved.searches=Vos recherches
 label.all.saved.searches=Toutes les recherches
 
 label.saved.searches=Recherches enregistr\u00E9es
-label.save.search.description1=Ce r\u00E9sultat de recherche est-il pertinent ?
-label.save.search.description2=Vous pouvez conserver ces filtres comme une recherche enregistr\u00E9e :
+label.save.search.description=Pour enregistrer cette recherche, entrez un nom et validez:
 
 label.search.saved=Votre recherche a \u00E9t\u00E9 enregistr\u00E9e dans votre espace personnel
 label.search.permalink= Lien permanent vers cette recherche
