--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -6,8 +6,11 @@ label.faceted.search.textSearch=Text search
 label.faceted.search.dateSearch=Date search
 label.faceted.search.peopleSearch=User search
 label.faceted.search.fulltext=Keywords
+label.faceted.search.categorizationSearch=Categorization
+label.faceted.search.coverage=Coverage
+label.faceted.search.subjects=Subjects
 
-command.faceted.search.go=Go »
+command.faceted.search.go=Go \u00BB
 command.faceted.search.clear=Clear
 
 label.none=None
