--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -20,6 +20,8 @@ label.all.saved.searches=All searches
 label.saved.searches=Saved searches
 label.save.search.description=To save this search, enter a name and confirm:
 
+label.search.popup.title=Click on an item to select it
+
 label.search.saved=Your search has been saved in your personal workspace
 label.search.permalink= Permanent link to this search
 
