NXP-5573: add a new widget to select paths to restrict the search

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -5,10 +5,12 @@ label.faceted.search.default=Default Faceted Search
 label.faceted.search.textSearch=Text search
 label.faceted.search.dateSearch=Date search
 label.faceted.search.peopleSearch=User search
-label.faceted.search.fulltext=Keywords
 label.faceted.search.categorizationSearch=Categorization
+label.faceted.search.pathSearch=Path
+label.faceted.search.fulltext=Keywords
 label.faceted.search.coverage=Coverage
 label.faceted.search.subjects=Subjects
+label.faceted.search.path=Folder
 
 command.faceted.search.go=Go \u00BB
 command.faceted.search.clear=Clear
