--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -5,10 +5,12 @@ label.faceted.search.default=Filtres par d\u00E9faut
 label.faceted.search.textSearch=Recherche textuelle
 label.faceted.search.dateSearch=Recherche par date
 label.faceted.search.peopleSearch=Recherche par utilisateur
-label.faceted.search.fulltext=Mots cl\u00E9s
 label.faceted.search.categorizationSearch=Cat\u00E9gorisation
+label.faceted.search.pathSearch=Chemin
+label.faceted.search.fulltext=Mots cl\u00E9s
 label.faceted.search.coverage=Couverture
 label.faceted.search.subjects=Sujet
+label.faceted.search.path=Dossier
 
 command.faceted.search.go=Go \u00BB
 command.faceted.search.clear=R\u00E9initialiser
