NXP-5676: saved search name is required before saving

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -30,3 +30,5 @@ label.search.permalink= Permanent link to this search
 # ECM types
 FacetedSearchDefault=Faceted search
 FacetedSearchDefault.description=Faceted search
+
+feedback.faceted.search.emptyTitle=Name your search to save it
