--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -30,3 +30,5 @@ label.search.permalink= Lien permanent vers cette recherche
 # ECM types
 FacetedSearchDefault=Recherche par filtre
 FacetedSearchDefault.description=Recherche par filtre
+
+feedback.faceted.search.emptyTitle=Donnez un nom ˆ la recherche pour l'enregistrer
