--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -31,4 +31,4 @@ label.search.permalink= Lien permanent vers cette recherche
 FacetedSearchDefault=Recherche par filtre
 FacetedSearchDefault.description=Recherche par filtre
 
-feedback.faceted.search.emptyTitle=Donnez un nom ˆ la recherche pour l'enregistrer
+feedback.faceted.search.emptyTitle=Donnez un nom \u00E0 la recherche pour l'enregistrer
