--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -11,6 +11,13 @@ label.faceted.search.fulltext=Keywords
 label.faceted.search.coverage=Coverage
 label.faceted.search.subjects=Subjects
 label.faceted.search.path=Folder
+label.faceted.search.local.configuration.content.view.selection=Faceted search configuration
+label.faceted.search.local.configuration.content.view.selection.info=Allow you to choice what content views can be used
+label.faceted.search.local.configuration.content.view.selection.label=Content view selection
+label.faceted.search.local.configuration.content.view.selection.available=Existing content view
+label.faceted.search.local.configuration.content.view.selection.enable=Enabled content view
+
+action.faceted.search.configuration=Faceted Search
 
 command.faceted.search.go=Go \u00BB
 command.faceted.search.clear=Clear
