--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -12,6 +12,8 @@ label.faceted.search.coverage=Couverture
 label.faceted.search.subjects=Sujet
 label.faceted.search.path=Dossier
 
+action.faceted.search.configuration=Recherche par filtres
+
 command.faceted.search.go=Go \u00BB
 command.faceted.search.clear=R\u00E9initialiser
 
