NXP-6704: Add french translations

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -11,6 +11,11 @@ label.faceted.search.fulltext=Mots cl\u00E9s
 label.faceted.search.coverage=Couverture
 label.faceted.search.subjects=Sujet
 label.faceted.search.path=Dossier
+label.faceted.search.local.configuration.content.view.selection=Configuration de la recherche par filtres
+label.faceted.search.local.configuration.content.view.selection.info=Permet de d\u00E9finir quelles vues de contenu sera utilis\u00E9es
+label.faceted.search.local.configuration.content.view.selection.label=Choix de la vue de contenu
+label.faceted.search.local.configuration.content.view.selection.available=Vues de contenu existantes
+label.faceted.search.local.configuration.content.view.selection.enable=Vues de contenu activ\u00E9es
 
 action.faceted.search.configuration=Recherche par filtres
 
