NXP-7484: Fix close label in path tree selection popup

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -30,6 +30,7 @@ label.saved.searches=Saved searches
 label.save.search.description=To save this search, enter a name and confirm:
 
 label.search.popup.title=Click on an item to select it
+label.search.popup.close=Close
 
 label.search.saved=Your search has been saved in your personal workspace
 label.search.permalink= Permanent link to this search
