--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -30,6 +30,7 @@ label.saved.searches=Recherches enregistr\u00E9es
 label.save.search.description=Pour enregistrer cette recherche, entrez un nom et validez :
 
 label.search.popup.title=Cliquez sur un \u00E9l\u00E9ment pour le s\u00E9lectionner
+label.search.popup.close=Fermer
 
 label.search.saved=Votre recherche a \u00E9t\u00E9 enregistr\u00E9e dans votre espace personnel
 label.search.permalink= Lien permanent vers cette recherche
