NXP-11057: add new faceted search widget listing 3 faceted search categories - from current user - from all users - from flagged (contributed)

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -27,6 +27,8 @@ label.user.saved.searches=Your searches
 label.all.saved.searches=All searches
 
 label.saved.searches=Saved searches
+label.flagged.saved.searches=Flagged saved searches
+all.label.saved.searches=All saved searches
 label.save.search.description=To save this search, enter a name and confirm:
 
 label.search.popup.title=Click on an item to select it
