--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -19,7 +19,7 @@ label.faceted.search.local.configuration.content.view.selection.enable=Vues de c
 
 action.faceted.search.configuration=Recherche par filtres
 
-command.faceted.search.go=Go \u00BB
+command.faceted.search.go=Filtrer
 command.faceted.search.clear=R\u00E9initialiser
 
 label.none=Aucune
