--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -19,7 +19,7 @@ label.faceted.search.local.configuration.content.view.selection.enable=Enabled f
 
 action.faceted.search.configuration=Faceted Search
 
-command.faceted.search.go=Go \u00BB
+command.faceted.search.go=Filter
 command.faceted.search.clear=Clear
 
 label.none=None
