--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -29,7 +29,7 @@ label.all.saved.searches=All searches
 label.saved.searches=Saved searches
 label.flagged.saved.searches=Flagged saved searches
 all.label.saved.searches=All saved searches
-label.save.search.description=To save this search, enter a name and confirm:
+label.save.search.description=To keep this search, enter a name and save it.
 
 label.search.popup.title=Click on an item to select it
 label.search.popup.close=Close
