NXP-11209: Update label for saved search

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -27,7 +27,7 @@ label.user.saved.searches=Your searches
 label.all.saved.searches=All searches
 
 label.saved.searches=Saved searches
-label.save.search.description=To save this search, enter a name and confirm:
+label.save.search.description=To keep this search, enter a name and save it.
 
 label.search.popup.title=Click on an item to select it
 label.search.popup.close=Close
