NXP-11059: migrate faceted search to use the new Save search box.
List the saved searches in the user Home.

Allow the user to migrate old saved searches to be able to list them in the Home.

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -28,11 +28,15 @@ label.all.saved.searches=All searches
 
 label.saved.searches=Saved searches
 label.save.search.description=To keep this search, enter a name and save it.
+label.faceted.search.saveSearch=Save this search
+label.faceted.search.save.description=If this search is relevant, keep it by default in the list of searches below by saving it
+label.faceted.search.save.placeholder=Specifications, Documentations, Presentations
+label.home.faceted.saved.searches=Faceted searches
 
 label.search.popup.title=Click on an item to select it
 label.search.popup.close=Close
 
-label.search.saved=Your search has been saved in your personal workspace
+label.search.saved=Your search has been saved
 label.search.permalink= Permanent link to this search
 
 # ECM types
@@ -40,3 +44,7 @@ FacetedSearchDefault=Faceted search
 FacetedSearchDefault.description=Faceted search
 
 feedback.faceted.search.emptyTitle=Name your search to save it
+
+label.faceted.search.migrate.description=Click on the button "{0}" to make the content of your "{1}" folder available from here.
+label.faceted.search.migrate.old.searches=Migrate saved searches
+label.faceted.saved.searches.migrated=Successfully migrated {0} searches
