--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -28,11 +28,15 @@ label.all.saved.searches=Toutes les recherches
 
 label.saved.searches=Recherches enregistr\u00E9es
 label.save.search.description=Pour enregistrer cette recherche, entrez un nom et validez :
+label.faceted.search.saveSearch=Sauvegarder cette recherche
+label.faceted.search.save.description=If this search is relevant, keep it by default in the list of searches below by saving it
+label.faceted.search.save.placeholder=Specifications, Documentations, Presentations
+label.home.faceted.saved.searches=Recherche par filtres
 
 label.search.popup.title=Cliquez sur un \u00E9l\u00E9ment pour le s\u00E9lectionner
 label.search.popup.close=Fermer
 
-label.search.saved=Votre recherche a \u00E9t\u00E9 enregistr\u00E9e dans votre espace personnel
+label.search.saved=Votre recherche a \u00E9t\u00E9 enregistr\u00E9e
 label.search.permalink= Lien permanent vers cette recherche
 
 # ECM types
@@ -40,3 +44,7 @@ FacetedSearchDefault=Recherche par filtre
 FacetedSearchDefault.description=Recherche par filtre
 
 feedback.faceted.search.emptyTitle=Donnez un nom \u00E0 la recherche pour l'enregistrer
+
+label.faceted.search.migrate.description=Cliquez sur le bouton "{0}" pour que vos recherches enregistr\u00E9es s'affichent dor\u00E9navant ici. Le contenu de votre dossier "{1}" sera accessible depuis cet onglet.
+label.faceted.search.migrate.old.searches=Migrer les recherches enregistr\u00E9es
+label.faceted.saved.searches.migrated= {0} recherches enregistr\u00E9es migr\u00E9es avec succ\u00E8s
