NXP-11653: Add missing translation

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -48,3 +48,4 @@ feedback.faceted.search.emptyTitle=Name your search to save it
 label.faceted.search.migrate.description=Click on the button "{0}" to make the content of your "{1}" folder available from here.
 label.faceted.search.migrate.old.searches=Migrate saved searches
 label.faceted.saved.searches.migrated=Successfully migrated {0} searches
+all.label.saved.searches=All saved searches
