--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -48,3 +48,4 @@ feedback.faceted.search.emptyTitle=Donnez un nom \u00E0 la recherche pour l'enre
 label.faceted.search.migrate.description=Cliquez sur le bouton "{0}" pour que vos recherches enregistr\u00E9es s'affichent dor\u00E9navant ici. Le contenu de votre dossier "{1}" sera accessible depuis cet onglet.
 label.faceted.search.migrate.old.searches=Migrer les recherches enregistr\u00E9es
 label.faceted.saved.searches.migrated= {0} recherches enregistr\u00E9es migr\u00E9es avec succ\u00E8s
+all.label.saved.searches=Toutes les recherches sauvegard\u00E9es
