NXP-11798: homogeneize labels for saved searches / search filters. Remove 'messages.properties' file, use labels from 'messages_en.properties'

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -1,6 +1,6 @@
 label.faceted.search=Faceted Search
 label.faceted.searches=Available Faceted Searches
-label.faceted.search.default=Default Faceted Search
+label.faceted.search.default=Default search
 
 label.faceted.search.textSearch=Text search
 label.faceted.search.dateSearch=Date search
@@ -23,12 +23,11 @@ command.faceted.search.go=Filter
 command.faceted.search.clear=Clear
 
 label.none=None
-label.user.saved.searches=Your searches
-label.all.saved.searches=All searches
+label.user.saved.searches=Saved searches
+label.all.saved.searches=Shared searches
 
 label.saved.searches=Saved searches
-label.flagged.saved.searches=Flagged saved searches
-all.label.saved.searches=All saved searches
+label.flagged.saved.searches=Search filters
 label.save.search.description=To keep this search, enter a name and save it.
 label.faceted.search.saveSearch=Save this search
 label.faceted.search.save.description=If this search is relevant, keep it by default in the list of searches below by saving it
