--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -23,15 +23,16 @@ command.faceted.search.go=Filtrer
 command.faceted.search.clear=R\u00E9initialiser
 
 label.none=Aucune
-label.user.saved.searches=Vos recherches
-label.all.saved.searches=Toutes les recherches
+label.user.saved.searches=Recherches enregistr\u00E9es
+label.all.saved.searches=Recherches partag\u00E9es
 
 label.saved.searches=Recherches enregistr\u00E9es
+label.flagged.saved.searches=Filtres de recherche
 label.save.search.description=Pour enregistrer cette recherche, entrez un nom et validez :
-label.faceted.search.saveSearch=Sauvegarder cette recherche
-label.faceted.search.save.description=If this search is relevant, keep it by default in the list of searches below by saving it
+label.faceted.search.saveSearch=Enregistrer cette recherche
+label.faceted.search.save.description=Si cette recherche est pertinente, enregistrez-la pour pouvoir la r\u00E9utiliser plus tard depuis la liste d\u00E9roulante ci-dessous.
 label.faceted.search.save.placeholder=Specifications, Documentations, Presentations
-label.home.faceted.saved.searches=Recherche par filtres
+label.home.faceted.saved.searches=Recherches par filtres
 
 label.search.popup.title=Cliquez sur un \u00E9l\u00E9ment pour le s\u00E9lectionner
 label.search.popup.close=Fermer
@@ -43,9 +44,8 @@ label.search.permalink= Lien permanent vers cette recherche
 FacetedSearchDefault=Recherche par filtre
 FacetedSearchDefault.description=Recherche par filtre
 
-feedback.faceted.search.emptyTitle=Donnez un nom \u00E0 la recherche pour l'enregistrer
+feedback.faceted.search.emptyTitle=Donnez un nom \u00E0 la recherche pour la enregistrer
 
 label.faceted.search.migrate.description=Cliquez sur le bouton "{0}" pour que vos recherches enregistr\u00E9es s'affichent dor\u00E9navant ici. Le contenu de votre dossier "{1}" sera accessible depuis cet onglet.
 label.faceted.search.migrate.old.searches=Migrer les recherches enregistr\u00E9es
 label.faceted.saved.searches.migrated= {0} recherches enregistr\u00E9es migr\u00E9es avec succ\u00E8s
-all.label.saved.searches=Toutes les recherches sauvegard\u00E9es
