NXP-13914: add collection in faceted seraches

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -5,6 +5,7 @@ label.faceted.search.default=Default search
 label.faceted.search.textSearch=Text search
 label.faceted.search.dateSearch=Date search
 label.faceted.search.peopleSearch=User search
+label.faceted.search.collectionSearch=Collection search
 label.faceted.search.categorizationSearch=Categorization
 label.faceted.search.pathSearch=Path
 label.faceted.search.fulltext=Keywords
