NXP-13914: add french translation

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -5,6 +5,7 @@ label.faceted.search.default=Filtres par d\u00E9faut
 label.faceted.search.textSearch=Recherche textuelle
 label.faceted.search.dateSearch=Recherche par date
 label.faceted.search.peopleSearch=Recherche par utilisateur
+label.faceted.search.collectionSearch=Recherche par collection
 label.faceted.search.categorizationSearch=Cat\u00E9gorisation
 label.faceted.search.pathSearch=Chemin
 label.faceted.search.fulltext=Mots cl\u00E9s
